--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,13 @@ AUTH_MAX_FAILED_ATTEMPTS=5
 AUTH_LOCK_MINUTES=15
 AUTH_PWD_MIN_LENGTH=12
 AUTH_PWD_HISTORY=5
+
+# Crypto at rest (optional but recommended in prod)
+# Base64 of 32 random bytes (AES-256 key). Example: openssl rand -base64 32
+APP_CRYPTO_KEY_BASE64=
+
+# Distributed rate limiting (optional)
+APP_REDIS_ENABLED=false
+APP_REDIS_HOST=localhost
+APP_REDIS_PORT=6379
+APP_REDIS_SSL=false
